# imdata

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  test.py
imdata/: __init__.py  imdata.py
